# Taxi-Dispatch-OpenEnv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: agent.py  baseline_results.json  run_baseline.py
env/: __init__.py  models.py  tasks.py  taxi_env.py
server/: app.py
tests/: test_env.py
