[project]
name = "taxi-dispatch-openenv"
version = "0.1.0"
description = "Taxi Dispatch OpenEnv"
authors = [{name = "SaisrivanthK"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"